turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:15: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
    gauche()(90)
          ^